# Tree-Wizard

./: README.md  Tree-Wizard.cabal
.stack-work/intero/: intero2164oWE.hs  intero2912-Wt.hs  intero2912kCh.hs  intero36920wA.hs  intero3692bIf.hs  intero992H_D.hs  intero992Iru.hs
.stack-work/intero/intero3692Cnx/TW/: Tree.hi
.stack-work/intero/intero992UJK/TW/: Tree.hi
.stack-work/intero/intero992UJK/TW/Tests/: TestTree.hi
.stack-work/intero/intero992V10/TW/: Tree.hi
TW/: main.hs  tree.hs
TW/Tests/: testTree.hs
