name:                Tree-Wizard
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Tree-Wizard#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Tree-Wizard
  hs-source-dirs:      .
  main-is:             TW\Main.hs
  other-modules:       TW.Tests.TestTree
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,HUnit
                      ,mtl
